--- a/recipes/main_dish_chicken_curry.html
+++ b/recipes/main_dish_chicken_curry.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Салатные листья с бальзамиком - Кулинарные заметки</title>
+    <title>Курица карри - Кулинарные заметки</title>
     <!-- Favicon (иконка вкладки) -->
     <link rel="icon" href="../assets/icons/icons8-girl-64.png" type="image/png">
     <link rel="stylesheet" href="../style.css">
@@ -125,24 +126,27 @@
         </a>
 
         <div class="recipe-header">
-            <h1>Салатные листья с бальзамиком</h1>
+            <h1>Курица карри</h1>
             <div class="recipe-meta">
-                <span><i class="far fa-clock"></i> 5 мин</span>
-                <span><i class="fas fa-user-friends"></i> 2 порции</span>
+                <span><i class="far fa-clock"></i> 40 мин</span>
+                <span><i class="fas fa-user-friends"></i> 4 порции</span>
 
             </div>
         </div>
 
-        <img src="../site-photos/snacks_green_salad_with_balsamic.jpg" 
-             alt="Салатные листья с бальзамиком" class="recipe-image-main">
+        <img src="../site-photos/main_dish_chicken_curry.jpg" 
+             alt="Курица карри" class="recipe-image-main">
 
         <div class="recipe-content">
             <div class="ingredients">
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
-                    <li>100 г зеленого салата</li> 
-<li>5 г оливкового масла</li> 
-<li>5 г бальзамического крема</li> 
+                    <li>700 г куриной грудки</li> 
+                    <li>500 г нарезанных помидоров</li> 
+                    <li>200 г 20% сливок</li> 
+                    <li>1 луковица</li> 
+                    <li>10 г кукурузного крахмала (по желанию, для более приятной текстуры)</li> 
+                    <li>Соль, перец, приправа карри, хлопья чили (по желанию, для любителей острого)</li> 
 
 
 
@@ -152,15 +156,20 @@
             <div class="instructions">
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
-                    <li>Выложите зеленые листья в миску.</li> 
-<li>Добавьте оливковое масло и бальзамический крем, аккуратно перемешайте.</li> 
+                    <li>Нарежьте куриное филе кусочками и обжарьте на сильном огне. Готовьте 3-5 минут на нагреве 9/9. Приправьте солью и перцем.</li> 
+                    <li>После того, как перевернете курицу, добавьте на сковороду лук, нарезанный четвертинками колец.</li> 
+                    <li>Когда курица будет почти готова, убавьте огонь до 5/9 и добавьте нарезанные помидоры, потомите.</li> 
+                    <li>Добавьте сливки, перемешайте и снова оставьте томиться на 3-5 минут.</li> 
+                    <li>Добавляйте приправу карри постепенно, регулируя количество по вкусу. Если хотите получить более острый карри, можно также добавить хлопья чили.</li> 
+                    <li>Смешайте все вместе, убавьте огонь до минимума (1/9) и всыпьте кукурузный крахмал.</li> 
+                    <li>Перемешайте и дайте курице потушиться в течение 10–15 минут, чтобы она полностью пропиталась соусом.</li> 
 
                 </ol>
             </div>
 
             
                 <div class="note">
-                <p><strong>Совет:</strong> Можно сбрызнуть капелькой лимона для кокетства </p>
+                <p><strong>Совет:</strong> Острая курица карри отлично идет с рисом и салатными листьями. </p>
                 </div>
 
         </div>
