--- a/recipes/main_dish_orzo.html
+++ b/recipes/main_dish_orzo.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Салатные листья с бальзамиком - Кулинарные заметки</title>
+    <title>Орзо с греческой колбаской - Кулинарные заметки</title>
     <!-- Favicon (иконка вкладки) -->
     <link rel="icon" href="../assets/icons/icons8-girl-64.png" type="image/png">
     <link rel="stylesheet" href="../style.css">
@@ -125,24 +126,29 @@
         </a>
 
         <div class="recipe-header">
-            <h1>Салатные листья с бальзамиком</h1>
+            <h1>Орзо с греческой колбаской</h1>
             <div class="recipe-meta">
-                <span><i class="far fa-clock"></i> 5 мин</span>
-                <span><i class="fas fa-user-friends"></i> 2 порции</span>
+                <span><i class="far fa-clock"></i> 25 мин</span>
+                <span><i class="fas fa-user-friends"></i> 6 порций</span>
 
             </div>
         </div>
 
-        <img src="../site-photos/snacks_green_salad_with_balsamic.jpg" 
-             alt="Салатные листья с бальзамиком" class="recipe-image-main">
+        <img src="../site-photos/main_dish_orzo.jpg" 
+             alt="Орзо с греческой колбаской" class="recipe-image-main">
 
         <div class="recipe-content">
             <div class="ingredients">
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
-                    <li>100 г зеленого салата</li> 
-<li>5 г оливкового масла</li> 
-<li>5 г бальзамического крема</li> 
+                    <li>500 г орзо</li> 
+<li>500 г концентрированного томатного сока</li> 
+<li>200 г греческой колбасы</li> 
+<li>50 г феты</li> 
+<li>1 луковица</li> 
+<li>4 зубчика чеснока</li> 
+<li>1 бульонный кубик</li> 
+<li>Соль, перец, паприка, чили</li> 
 
 
 
@@ -152,16 +158,16 @@
             <div class="instructions">
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
-                    <li>Выложите зеленые листья в миску.</li> 
-<li>Добавьте оливковое масло и бальзамический крем, аккуратно перемешайте.</li> 
+                    <li>Сварите орзо в подсоленной воде согласно инструкции на упаковке.</li> 
+<li>Тем временем обжарьте колбасу на сильном огне. Добавьте лук и выдавите чеснок.</li> 
+<li>Когда орзо сварится, слейте почти всю воду, оставив небольшое количество воды, в которой варились макароны.</li> 
+<li>Убавьте огонь до минимума, добавьте томатный сок, обжаренную колбасу с луком и чесноком, раскрошенную фету и приправы.</li> 
+<li>Хорошо перемешайте, доведите до слабого кипения, затем снимите с огня и дайте постоять 5–10 минут перед подачей.</li> 
 
                 </ol>
             </div>
 
             
-                <div class="note">
-                <p><strong>Совет:</strong> Можно сбрызнуть капелькой лимона для кокетства </p>
-                </div>
 
         </div>
     </main>
