--- a/recipes/main_dish_pelmeni.html
+++ b/recipes/main_dish_pelmeni.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Салатные листья с бальзамиком - Кулинарные заметки</title>
+    <title>Пельмени - Кулинарные заметки</title>
     <!-- Favicon (иконка вкладки) -->
     <link rel="icon" href="../assets/icons/icons8-girl-64.png" type="image/png">
     <link rel="stylesheet" href="../style.css">
@@ -125,24 +125,27 @@
         </a>
 
         <div class="recipe-header">
-            <h1>Салатные листья с бальзамиком</h1>
+            <h1>Пельмени</h1>
             <div class="recipe-meta">
-                <span><i class="far fa-clock"></i> 5 мин</span>
-                <span><i class="fas fa-user-friends"></i> 2 порции</span>
+                <span><i class="far fa-clock"></i> 180 мин</span>
+                <span><i class="fas fa-user-friends"></i> 6 порций</span>
 
             </div>
         </div>
 
-        <img src="../site-photos/snacks_green_salad_with_balsamic.jpg" 
-             alt="Салатные листья с бальзамиком" class="recipe-image-main">
+        <img src="../site-photos/main_dish_pelmeni.jpg" 
+             alt="Пельмени" class="recipe-image-main">
 
         <div class="recipe-content">
             <div class="ingredients">
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
-                    <li>100 г зеленого салата</li> 
-<li>5 г оливкового масла</li> 
-<li>5 г бальзамического крема</li> 
+                    <li>600 г фарша</li> 
+<li>500 г муки</li> 
+<li>200 г ледяной воды</li> 
+<li>1 луковица</li> 
+<li>1/2 бульонного кубика</li> 
+<li>Соль, перец</li> 
 
 
 
@@ -152,15 +155,27 @@
             <div class="instructions">
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
-                    <li>Выложите зеленые листья в миску.</li> 
-<li>Добавьте оливковое масло и бальзамический крем, аккуратно перемешайте.</li> 
+                    <li>Добавьте щепотку соли в ледяную воду и влейте ее в муку.</li> 
+<li>Замешивайте тесто в течение 8–12 минут. Оно должно получиться мягким, тянуться, не рваться и не липнуть к рукам.</li> 
+<li>Дайте тесту отдохнуть 30 минут.</li> 
+<li>Измельчите лук в блендере и добавьте его в фарш.</li> 
+<li>Растворите половину бульонного кубика в 50 мл воды и добавьте к фаршу. Приправьте солью и перцем, а также добавьте дополнительные специи по вкусу, например, паприки и чили, если хотите.</li> 
+<li>Слегка припылите рабочую поверхность мукой и раскатайте тесто.</li> 
+<li>Вырежьте кружочки диаметром 5–7 см. Отложите обрезки отдельно, не вмешивая их обратно в основное тесто.</li> 
+<li>Выложите примерно по 1 чайной ложке фарша на каждый кружок.</li> 
+<li>Смочите одну половину внешнего края водой, сложите в форме полумесяца, защипните края и сверните в пельмень.</li> 
+<li>Если пельмени планируете есть сразу, отварите в кипящей подсоленной воде после всплытия минут 6-7</li> 
+<li>Если пельмени замораживаете, то выложите готовые пельмени на припыленный мукой противень так, чтобы они не соприкасались.</li> 
+<li>Охладите пельмени в холодильнике в течение 20–30 минут, затем уберите в морозилку.</li> 
+<li>Через 4–6 часов переложите их в пакет или контейнер, где их можно хранить слоями.</li> 
+<li>Чтобы сварить замороженные или свежие пельмени, бросьте их в кипящую воду и варите 6–7 минут после того, как они всплывут на поверхность.</li> 
 
                 </ol>
             </div>
 
             
                 <div class="note">
-                <p><strong>Совет:</strong> Можно сбрызнуть капелькой лимона для кокетства </p>
+                <p><strong>Совет:</strong> Лучше не раскатывать все тесто сразу, а разделить на несколько частей и сделать несколько раскаток. Остатки теста можно использовать для последней порции пельменей. </p>
                 </div>
 
         </div>
