--- a/recipes/snaks_salad_carrot_cabbabege.html
+++ b/recipes/snaks_salad_carrot_cabbabege.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Салатные листья с бальзамиком - Кулинарные заметки</title>
+    <title>Салат из капусты с морковью - Кулинарные заметки</title>
     <!-- Favicon (иконка вкладки) -->
     <link rel="icon" href="../assets/icons/icons8-girl-64.png" type="image/png">
     <link rel="stylesheet" href="../style.css">
@@ -125,24 +126,25 @@
         </a>
 
         <div class="recipe-header">
-            <h1>Салатные листья с бальзамиком</h1>
+            <h1>Салат из капусты с морковью</h1>
             <div class="recipe-meta">
-                <span><i class="far fa-clock"></i> 5 мин</span>
+                <span><i class="far fa-clock"></i> 7 мин</span>
                 <span><i class="fas fa-user-friends"></i> 2 порции</span>
 
             </div>
         </div>
 
-        <img src="../site-photos/snacks_green_salad_with_balsamic.jpg" 
-             alt="Салатные листья с бальзамиком" class="recipe-image-main">
+        <img src="../site-photos/snaks_salad_carrot_cabbabege.jpg" 
+             alt="Салат из капусты с морковью" class="recipe-image-main">
 
         <div class="recipe-content">
             <div class="ingredients">
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
-                    <li>100 г зеленого салата</li> 
-<li>5 г оливкового масла</li> 
-<li>5 г бальзамического крема</li> 
+                    <li>150 г капусты</li> 
+<li>50 г моркови</li> 
+<li>5 мл растительного масла</li> 
+<li>Щепотка соли</li> 
 
 
 
@@ -152,15 +154,16 @@
             <div class="instructions">
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
-                    <li>Выложите зеленые листья в миску.</li> 
-<li>Добавьте оливковое масло и бальзамический крем, аккуратно перемешайте.</li> 
+                    <li>Мелко нашинкуйте капусту и слегка помните ее руками.</li> 
+<li>Натрите морковь на терке.</li> 
+<li>Смешайте все в миске и хорошо перемешайте.</li> 
 
                 </ol>
             </div>
 
             
                 <div class="note">
-                <p><strong>Совет:</strong> Можно сбрызнуть капелькой лимона для кокетства </p>
+                <p><strong>Совет:</strong> Можно добавить чуть-чуть сахара, если капуста горчит. </p>
                 </div>
 
         </div>
