--- a/index.html
+++ b/index.html
@@ -282,6 +282,20 @@
                 </a>
                 <!-- Рецепт Орзо с греческой колбаской конец -->
 
+                <!-- Рецепт Паста карбонара -->
+                <a href="recipes/main_dish_pasta_carbonara.html" class="recipe-card"> 
+                    <div class="recipe-image">
+                        <img src="site-photos/main_dish_pasta_carbonara.jpg" alt="Паста карбонара"> 
+                        <div class="recipe-overlay">
+                            <i class="fas fa-external-link-alt"></i>
+                        </div>
+                    </div>
+                    <div class="recipe-info">
+                        <h3>Паста карбонара</h3> 
+                        <p class="recipe-time"><i class="far fa-clock"></i> 15 мин </p> 
+                    </div>
+                </a>
+                <!-- Рецепт Паста карбонара конец -->
 
                 <!-- Рецепт Пельмени -->
                 <a href="recipes/main_dish_pelmeni.html" class="recipe-card"> 
