--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <div class="tab-content active" id="breakfast">
                 <h2 class="category-title">Завтраки</h2>
                 <div class="recipes-grid">
+
                     <!-- Рецепт Американские оладья -->
                     <a href="recipes/breakfast_american_style_pancakes.html" class="recipe-card">
                         <div class="recipe-image">
@@ -85,10 +86,25 @@
                         </div>
                         <div class="recipe-info">
                             <h3>Американские оладья</h3>
-                            <p class="recipe-time"><i class="far fa-clock"></i> 45 мин (25 мин активных)</p>
+                            <p class="recipe-time"><i class="far fa-clock"></i> 45 мин </p>
                         </div>
                     </a>
                     <!-- Рецепт Американские оладья конец -->
+
+                    <!-- Рецепт Блины -->
+                    <a href="recipes/breakfast_bliny.html" class="recipe-card"> 
+                        <div class="recipe-image">
+                            <img src="site-photos/breakfast_bliny.jpg" alt="Блины"> 
+                            <div class="recipe-overlay">
+                                <i class="fas fa-external-link-alt"></i>
+                            </div>
+                        </div>
+                        <div class="recipe-info">
+                            <h3>Блины</h3> 
+                            <p class="recipe-time"><i class="far fa-clock"></i> 90 мин  </p> 
+                        </div>
+                    </a>
+                    <!-- Рецепт Блины конец -->
 
                     <!-- Рецепт Овсянка -->
                     <a href="recipes/breakfast_oat_porridge.html" class="recipe-card">
@@ -182,7 +198,7 @@
                         </div>
                         <div class="recipe-info">
                             <h3>Маринованные грибы</h3> 
-                            <p class="recipe-time"><i class="far fa-clock"></i> 60 мин (25 мин активных) </p> 
+                            <p class="recipe-time"><i class="far fa-clock"></i> 60 мин</p> 
                         </div>
                     </a>
                     <!-- Рецепт Маринованные грибы конец -->
@@ -197,7 +213,7 @@
                         </div>
                         <div class="recipe-info">
                             <h3>Маринованные огурцы</h3> 
-                            <p class="recipe-time"><i class="far fa-clock"></i> 65 мин (5 мин активных) </p> 
+                            <p class="recipe-time"><i class="far fa-clock"></i> 65 мин </p> 
                         </div>
                     </a>
                     <!-- Рецепт Маринованные огурцы конец -->
