--- a/index.html
+++ b/index.html
@@ -343,8 +343,36 @@
             <div class="tab-content active" id="desserts"> 
                 <h2 class="category-title">Десерты</h2> 
                 <div class="recipes-grid">
-                <!-- Рецепт 1 -->  
-                <!-- Рецепт 1 конец -->  
+
+                 <!-- Рецепт Банановый хлеб -->
+                <a href="recipes/dessert_banana_bread.html" class="recipe-card"> 
+                    <div class="recipe-image">
+                        <img src="site-photos/dessert_banana_bread.jpg" alt="Банановый хлеб"> 
+                        <div class="recipe-overlay">
+                            <i class="fas fa-external-link-alt"></i>
+                        </div>
+                    </div>
+                    <div class="recipe-info">
+                        <h3>Банановый хлеб</h3> 
+                        <p class="recipe-time"><i class="far fa-clock"></i> 60 мин </p> 
+                    </div>
+                </a>
+                <!-- Рецепт Банановый хлеб конец --> 
+
+                <!-- Рецепт Безе -->
+                <a href="recipes/dessert_bese.html" class="recipe-card"> 
+                    <div class="recipe-image">
+                        <img src="site-photos/dessert_bese.jpg" alt="Безе"> 
+                        <div class="recipe-overlay">
+                            <i class="fas fa-external-link-alt"></i>
+                        </div>
+                    </div>
+                    <div class="recipe-info">
+                        <h3>Безе</h3> 
+                        <p class="recipe-time"><i class="far fa-clock"></i> 130 мин </p> 
+                    </div>
+                </a>
+                <!-- Рецепт Безе конец -->
                 </div>
             </div>
 
@@ -352,8 +380,9 @@
             <div class="tab-content active" id="sauces"> 
                 <h2 class="category-title">Кремы/Соусы</h2> 
                 <div class="recipes-grid">
+
                 <!-- Рецепт 1 -->  
-                <!-- Рецепт 1 конец -->  
+                <!-- Рецепт 1 конец --> 
                 </div>
             </div>
             
