--- a/recipes/dessert_banana_bread.html
+++ b/recipes/dessert_banana_bread.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Блины - Кулинарные заметки</title>
+    <title>Банановый хлеб - Кулинарные заметки</title>
     <!-- Favicon (иконка вкладки) -->
     <link rel="icon" href="../assets/icons/icons8-girl-64.png" type="image/png">
     <link rel="stylesheet" href="../style.css">
@@ -126,29 +126,28 @@
         </a>
 
         <div class="recipe-header">
-            <h1>Блины</h1>
+            <h1>Банановый хлеб</h1>
             <div class="recipe-meta">
-                <span><i class="far fa-clock"></i> 90 мин (65 активных)</span>
-                <span><i class="fas fa-user-friends"></i> ~10 блинчиков</span>
+                <span><i class="far fa-clock"></i> 60 мин</span>
+                <span><i class="fas fa-user-friends"></i> 10 порций</span>
 
             </div>
         </div>
 
-        <img src="../site-photos/breakfast_bliny.jpg" 
-             alt="Блины" class="recipe-image-main">
+        <img src="../site-photos/dessert_banana_bread.jpg" 
+             alt="Банановый хлеб" class="recipe-image-main">
 
         <div class="recipe-content">
             <div class="ingredients">
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
-                    <li>2 яйца</li> 
-                    <li>40 г сахара</li> 
-                    <li>300 мл молока</li> 
-                    <li>125 г муки</li> 
-                    <li>90 мл кипятка</li> 
-                    <li>Щепота соли</li> 
-                    <li>Подсолнечное масло, чтобы периодически смазывать сковородку</li> 
-                    <li>Сливочное масло, чтобы смазавать готовый блин</li> 
+                    <li>2 средних банана</li> 
+                    <li>2 средних яйца (или 1 большое)</li> 
+                    <li>200 г муки100 г сахара</li> 
+                    <li>75 г сливочного масла</li> 
+                    <li>1/2 ч.л. соды</li> 
+                    <li>1 пакетик ванилина (1-2 гр)</li> 
+                    <li>Щепотка соли</li> 
 
 
 
@@ -158,21 +157,21 @@
             <div class="instructions">
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
-                    <li>Взбейте яйца с сахаром и солью, добавьте половину молока.</li> 
-                    <li>Постепенно всыпьте муку, тщательно перемешивая.</li> 
-                    <li>Влейте оставшееся молоко.</li> 
-                    <li>Затем тонкой струйкой влейте крутой кипяток и оставьте тесто на 20-30 минут.</li> 
-                    <li>Выпекайте блины на среднем огне, смазав сковороду растительным маслом.</li> 
-                    <li>Переворачивайте блины силиконовой лопаткой.</li> 
-                    <li>Готовые блины смазывайте сливочным маслом и складывайте стопкой, накрыв полотенцем.</li> 
+                    <li>Разогрейте духовку до 175°C в режиме верхнего и нижнего нагрева.</li> 
+                    <li>Растопите сливочное масло.</li> 
+                    <li>Разомните бананы вилкой.</li> 
+                    <li>Добавьте масло к бананам и перемешайте.</li> 
+                    <li>Добавьте соду, соль, сахар, ванилин и яйцо, затем перемешайте.</li> 
+                    <li>Просейте муку и добавьте в тесто, перемешайте до почти однородной консистенции.</li> 
+                    <li>Застелите форму для выпечки пергаментом, вылейте тесто и слегка постучите формой по столу, чтобы выпустить пузырьки воздуха.</li> 
+                    <li>Поставьте форму в разогретую духовку на 10 минут.</li> 
+                    <li>Сделайте на поверхности кекса продольный разрез, отступив 2-3 см от края — это поможет кексу красиво раскрыться при выпекании.</li> 
+                    <li>Выпекайте ещё 35 минут, готовность проверьте деревянной зубочисткой.</li> 
 
                 </ol>
             </div>
 
             
-                <div class="note">
-                <p><strong>Совет:</strong> Время готовки можно значительно сократить, если жарить блинчике на двух или трех сковородках. </p>
-                </div>
 
         </div>
     </main>
