--- a/recipes/dessert_bese.html
+++ b/recipes/dessert_bese.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Блины - Кулинарные заметки</title>
+    <title>Безе - Кулинарные заметки</title>
     <!-- Favicon (иконка вкладки) -->
     <link rel="icon" href="../assets/icons/icons8-girl-64.png" type="image/png">
     <link rel="stylesheet" href="../style.css">
@@ -126,29 +126,24 @@
         </a>
 
         <div class="recipe-header">
-            <h1>Блины</h1>
+            <h1>Безе</h1>
             <div class="recipe-meta">
-                <span><i class="far fa-clock"></i> 90 мин (65 активных)</span>
-                <span><i class="fas fa-user-friends"></i> ~10 блинчиков</span>
+                <span><i class="far fa-clock"></i> 130 мин</span>
+                <span><i class="fas fa-user-friends"></i> 10 порций</span>
 
             </div>
         </div>
 
-        <img src="../site-photos/breakfast_bliny.jpg" 
-             alt="Блины" class="recipe-image-main">
+        <img src="../site-photos/dessert_bese.jpg" 
+             alt="Безе" class="recipe-image-main">
 
         <div class="recipe-content">
             <div class="ingredients">
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
-                    <li>2 яйца</li> 
-                    <li>40 г сахара</li> 
-                    <li>300 мл молока</li> 
-                    <li>125 г муки</li> 
-                    <li>90 мл кипятка</li> 
-                    <li>Щепота соли</li> 
-                    <li>Подсолнечное масло, чтобы периодически смазывать сковородку</li> 
-                    <li>Сливочное масло, чтобы смазавать готовый блин</li> 
+                    <li>2 яйца (понадобится только белок)</li> 
+<li>90 г сахара</li> 
+<li>Щепотка соли</li> 
 
 
 
@@ -158,20 +153,22 @@
             <div class="instructions">
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
-                    <li>Взбейте яйца с сахаром и солью, добавьте половину молока.</li> 
-                    <li>Постепенно всыпьте муку, тщательно перемешивая.</li> 
-                    <li>Влейте оставшееся молоко.</li> 
-                    <li>Затем тонкой струйкой влейте крутой кипяток и оставьте тесто на 20-30 минут.</li> 
-                    <li>Выпекайте блины на среднем огне, смазав сковороду растительным маслом.</li> 
-                    <li>Переворачивайте блины силиконовой лопаткой.</li> 
-                    <li>Готовые блины смазывайте сливочным маслом и складывайте стопкой, накрыв полотенцем.</li> 
+                    <li>Тщательно обезжирьте и высушите миску, в которой будете взбивать белки.</li> 
+<li>Аккуратно отделите белки от желтков (рекомендуется делать это над отдельной чашкой для каждого яйца, чтобы в белки не попала ни капли желтка).</li> 
+<li>Добавьте к белкам щепотку соли и начните взбивать на минимальной скорости до появления белой пены.</li> 
+<li>Увеличьте скорость до максимальной и продолжайте взбивать до тех пор, пока от венчика не начнет оставаться четкий след.</li> 
+<li>Затем постепенно всыпьте сахар, продолжая взбивать до устойчивых пиков (при поднятии венчика пик из белка должен сохранять форму и не оседать).</li> 
+<li>Застелите противень (или, лучше, решетку) бумагой для выпечки.</li> 
+<li>Разогрейте духовку до 95°C - безе нужно не испечь, а высушить.</li> 
+<li>Выложите безе на бумагу с помощью двух ложек или кондитерского мешка и поместите в духовку.</li> 
+<li>Точное время приготовления безе в духовке указать невозможно, так как оно зависит от размера безе (чем они больше, тем дольше сушка) и желаемой текстуры (чем суше вы хотите получить безе, тем больше времени потребуется). Начинать проверять готовность можно через 1,5–2 часа.</li> 
 
                 </ol>
             </div>
 
             
                 <div class="note">
-                <p><strong>Совет:</strong> Время готовки можно значительно сократить, если жарить блинчике на двух или трех сковородках. </p>
+                <p><strong>Совет:</strong> Чтобы точно рассчитать количество сахара, взвесьте белки и возьмите сахар в пропорции 1:1,5 (например, на 100 г белков потребуется 150 г сахара). Если среди ваших гостей есть поклонники разных видов безе — одни любят с тянучкой внутри, а другие полностью сухие, — вы можете сделать одну партию безе чуть меньше и достать их позже (для сухих), а другую — крупнее и вынуть пораньше (для мягких). </p>
                 </div>
 
         </div>
