--- a/recipes/breakfast_bliny.html
+++ b/recipes/breakfast_bliny.html
@@ -146,7 +146,7 @@
                     <li>300 мл молока</li> 
                     <li>125 г муки</li> 
                     <li>90 мл кипятка</li> 
-                    <li>Щепота соли</li> 
+                    <li>Щепотка соли</li> 
                     <li>Подсолнечное масло, чтобы периодически смазывать сковородку</li> 
                     <li>Сливочное масло, чтобы смазавать готовый блин</li> 
 
