--- a/recipes/breakfast_american_style_pancakes.html
+++ b/recipes/breakfast_american_style_pancakes.html
@@ -157,7 +157,7 @@
                     <li>Смешайте кефир, яйцо, сахар и растопленное масло до однородной консистенции.</li>
                     <li>В отдельной миске соедините муку, разрыхлитель, соду и соль.</li>
                     <li>Добавьте сухие ингредиенты к кефирной смеси и быстро перемешайте. Небольшие комочки допустимы.</li>
-                    <li>Не перемешивая повторно, переложите тесто в кондитерский мешок или оставьте в миске на 15–30 минут.</li>
+                    <li>Не перемешивая повторно, переложите тесто в кондитерский мешок или оставьте в миске на 15-30 минут.</li>
                     <li>Хорошо разогрейте сковороду и выпекайте на среднем огне на сухой поверхности, не накрывая крышкой.</li>
 
                 </ol>
