--- a/recipes/main_dish_chicken_curry.html
+++ b/recipes/main_dish_chicken_curry.html
@@ -156,13 +156,13 @@
             <div class="instructions">
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
-                    <li>Нарежьте куриное филе кусочками и обжарьте на сильном огне. Готовьте 3-5 минут на нагреве 9/9. Приправьте солью и перцем.</li> 
+                    <li>Нарежьте куриное филе кусочками и обжарьте на сильном огне. Готовьте 3-5 минут на максимальном нагреве. Приправьте солью и перцем.</li> 
                     <li>После того, как перевернете курицу, добавьте на сковороду лук, нарезанный четвертинками колец.</li> 
-                    <li>Когда курица будет почти готова, убавьте огонь до 5/9 и добавьте нарезанные помидоры, потомите.</li> 
+                    <li>Когда курица будет почти готова, убавьте огонь до среднего и добавьте нарезанные помидоры, потомите.</li> 
                     <li>Добавьте сливки, перемешайте и снова оставьте томиться на 3-5 минут.</li> 
                     <li>Добавляйте приправу карри постепенно, регулируя количество по вкусу. Если хотите получить более острый карри, можно также добавить хлопья чили.</li> 
-                    <li>Смешайте все вместе, убавьте огонь до минимума (1/9) и всыпьте кукурузный крахмал.</li> 
-                    <li>Перемешайте и дайте курице потушиться в течение 10–15 минут, чтобы она полностью пропиталась соусом.</li> 
+                    <li>Смешайте все вместе, убавьте огонь до минимума и всыпьте кукурузный крахмал.</li> 
+                    <li>Перемешайте и дайте курице потушиться в течение 10-15 минут, чтобы она полностью пропиталась соусом.</li> 
 
                 </ol>
             </div>
