--- a/recipes/snacks_greek_salad.html
+++ b/recipes/snacks_greek_salad.html
@@ -141,12 +141,12 @@
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
                     <li>2 средних огурца</li> 
-<li>1 помидор</li> 
-<li>1 сладкий перец (не болгарский)</li> 
-<li>1/2 средней красной луковицы</li> 
-<li>50 г феты</li> 
-<li>2 столовые ложки оливкового масла</li> 
-<li>Соль, орегано по вкусу</li> 
+                    <li>1 помидор</li> 
+                    <li>1 перец Рамиро (не болгарский)</li> 
+                    <li>1/2 средней красной луковицы</li> 
+                    <li>50 г феты</li> 
+                    <li>2 столовые ложки оливкового масла</li> 
+                    <li>Соль, орегано по вкусу</li> 
 
 
 
@@ -157,8 +157,8 @@
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
                     <li>Нарежьте все овощи и смешайте их в миске, добавьте соль и орегано.</li> 
-<li>Выложите целый кусок феты сверху овощей и полейте оливковым маслом.</li> 
-<li>Разломайте фету прямо в миске ложкой.</li> 
+                    <li>Выложите целый кусок феты сверху овощей и полейте оливковым маслом.</li> 
+                    <li>Разломайте фету прямо в миске ложкой.</li> 
 
                 </ol>
             </div>
