--- a/recipes/main_dish_pasta_carbonara.html
+++ b/recipes/main_dish_pasta_carbonara.html
@@ -129,7 +129,7 @@
             <h1>Паста карбонара</h1>
             <div class="recipe-meta">
                 <span><i class="far fa-clock"></i> 15 мин</span>
-                <span><i class="fas fa-user-friends"></i> 2 порций</span>
+                <span><i class="fas fa-user-friends"></i> 2 порции</span>
 
             </div>
         </div>
@@ -142,12 +142,12 @@
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
                     <li>200 мл сливок (15–20%)</li> 
-<li>180 г спагетти</li> 
-<li>150 г копченого бекона</li> 
-<li>2 зубчика чеснока</li> 
-<li>1 яичный желток</li> 
-<li>Соль, перец</li> 
-<li>Пармиджано для посыпания</li> 
+                    <li>180 г спагетти</li> 
+                    <li>150 г копченого бекона</li> 
+                    <li>2 зубчика чеснока</li> 
+                    <li>1 яичный желток</li> 
+                    <li>Соль, перец</li> 
+                    <li>Пармиджано для посыпания</li> 
 
 
 
@@ -158,12 +158,12 @@
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
                     <li>Сварите спагетти в слегка подсоленной воде согласно инструкции на упаковке.</li> 
-<li>Тем временем обжарьте бекон на сильном огне и добавьте чеснок.</li> 
-<li>В небольшой миске смешайте сливки с яичным желтком, солью и перцем.</li> 
-<li>Когда паста сварится, слейте почти всю воду, оставив немного воды, в которой варились спагетти.</li> 
-<li>Верните спагетти в кастрюлю и убавьте огонь до очень слабого.</li> 
-<li>Влейте сливочно-яичную смесь в бекон, постоянно помешивая, около 30 секунд. Затем добавьте всё к спагетти и готовьте на слабом огне около 5 минут, аккуратно перемешивая.</li> 
-<li>Подавайте, слегка посыпав сыром пармезан.</li> 
+                    <li>Тем временем обжарьте бекон на сильном огне и добавьте чеснок.</li> 
+                    <li>В небольшой миске смешайте сливки с яичным желтком, солью и перцем.</li> 
+                    <li>Когда паста сварится, слейте почти всю воду, оставив немного воды, в которой варились спагетти.</li> 
+                    <li>Верните спагетти в кастрюлю и убавьте огонь до очень слабого.</li> 
+                    <li>Влейте сливочно-яичную смесь в бекон, постоянно помешивая, около 30 секунд. Затем добавьте всё к спагетти и готовьте на слабом огне около 5 минут, аккуратно перемешивая.</li> 
+                    <li>Подавайте, слегка посыпав сыром пармезан.</li> 
 
                 </ol>
             </div>
