--- a/recipes/main_dish_pelmeni.html
+++ b/recipes/main_dish_pelmeni.html
@@ -156,19 +156,19 @@
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
                     <li>Добавьте щепотку соли в ледяную воду и влейте ее в муку.</li> 
-<li>Замешивайте тесто в течение 8–12 минут. Оно должно получиться мягким, тянуться, не рваться и не липнуть к рукам.</li> 
-<li>Дайте тесту отдохнуть 30 минут.</li> 
-<li>Измельчите лук в блендере и добавьте его в фарш.</li> 
-<li>Растворите половину бульонного кубика в 50 мл воды и добавьте к фаршу. Приправьте солью и перцем, а также добавьте дополнительные специи по вкусу, например, паприки и чили, если хотите.</li> 
-<li>Слегка припылите рабочую поверхность мукой и раскатайте тесто.</li> 
-<li>Вырежьте кружочки диаметром 5–7 см. Отложите обрезки отдельно, не вмешивая их обратно в основное тесто.</li> 
-<li>Выложите примерно по 1 чайной ложке фарша на каждый кружок.</li> 
-<li>Смочите одну половину внешнего края водой, сложите в форме полумесяца, защипните края и сверните в пельмень.</li> 
-<li>Если пельмени планируете есть сразу, отварите в кипящей подсоленной воде после всплытия минут 6-7</li> 
-<li>Если пельмени замораживаете, то выложите готовые пельмени на припыленный мукой противень так, чтобы они не соприкасались.</li> 
-<li>Охладите пельмени в холодильнике в течение 20–30 минут, затем уберите в морозилку.</li> 
-<li>Через 4–6 часов переложите их в пакет или контейнер, где их можно хранить слоями.</li> 
-<li>Чтобы сварить замороженные или свежие пельмени, бросьте их в кипящую воду и варите 6–7 минут после того, как они всплывут на поверхность.</li> 
+                    <li>Замешивайте тесто в течение 8-12 минут. Оно должно получиться мягким, тянуться, не рваться и не липнуть к рукам.</li> 
+                    <li>Дайте тесту отдохнуть 30 минут.</li> 
+                    <li>Измельчите лук в блендере и добавьте его в фарш.</li> 
+                    <li>Растворите половину бульонного кубика в 50 мл воды и добавьте к фаршу. Приправьте солью и перцем, а также добавьте дополнительные специи по вкусу, например, паприки и чили, если хотите.</li> 
+                    <li>Слегка припылите рабочую поверхность мукой и раскатайте тесто.</li> 
+                    <li>Вырежьте кружочки диаметром 5-7 см. Отложите обрезки отдельно, не вмешивая их обратно в основное тесто.</li> 
+                    <li>Выложите примерно по 1 чайной ложке фарша на каждый кружок.</li> 
+                    <li>Смочите одну половину внешнего края водой, сложите в форме полумесяца, защипните края и сверните в пельмень.</li> 
+                    <li>Если пельмени планируете есть сразу, отварите в кипящей подсоленной воде после всплытия минут 6-7</li> 
+                    <li>Если пельмени замораживаете, то выложите готовые пельмени на припыленный мукой противень так, чтобы они не соприкасались.</li> 
+                    <li>Охладите пельмени в холодильнике в течение 20-30 минут, затем уберите в морозилку.</li> 
+                    <li>Через 4-6 часов переложите их в пакет или контейнер, где их можно хранить слоями.</li> 
+                    <li>Чтобы сварить замороженные или свежие пельмени, бросьте их в кипящую воду и варите 6-7 минут после того, как они всплывут на поверхность.</li> 
 
                 </ol>
             </div>
